libtorrentsharp/LibtorrentSharp.Native/include/library.h

    // file listing
    LTS_EXPORT void get_torrent_file_list(const lt::torrent_info* torrent, torrent_file_list* file_list);
    LTS_EXPORT void destroy_torrent_file_list(torrent_file_list* file_list);
    // Number of pieces that overlap `file_index` (last - first + 1 of the
    // half-open range that file_piece_range returns). Returns 0 on null /
    // invalid / out-of-range file_index.
    LTS_EXPORT int32_t lts_torrent_info_file_num_pieces(lt::torrent_info* torrent, int32_t file_index);
    // Number of fixed-size 16 KiB blocks that overlap `file_index`. Blocks
    // are libtorrent's sub-piece unit for the wire protocol — they're the
    // granularity of request messages and partial-piece progress. Returns 0
    // on null / invalid / out-of-range file_index.
    LTS_EXPORT int32_t lts_torrent_info_file_num_blocks(lt::torrent_info* torrent, int32_t file_index);
    // Piece extent for a file: the first piece that overlaps the file and
    // one-past-the-last. Matches libtorrent's half-open index_range convention
    // (out_end is exclusive). Returns false (leaving out params untouched) on
    // null / invalid / out-of-range file_index or null out pointers.
    LTS_EXPORT bool lts_torrent_info_file_piece_range(lt::torrent_info* torrent, int32_t file_index, int32_t* out_first_piece, int32_t* out_end_piece);
    // Maps a (file, byte-offset, size) tuple into the piece that contains the
    // start of that range. Writes the piece index, the byte offset inside the
    // piece, and the number of contiguous bytes available from that offset
    // (capped by the piece boundary and the file's remaining bytes). Useful
    // for random-access reads / streaming. Returns false on null / invalid /
    // out-of-range inputs or null out pointers; the out parameters are left
    // untouched on failure.
    LTS_EXPORT bool lts_torrent_info_map_file(lt::torrent_info* torrent, int32_t file_index, int64_t offset, int32_t size, int32_t* out_piece_index, int32_t* out_piece_offset, int32_t* out_length);
    // Inverse of map_file: given a piece index, a byte offset within that
    // piece, and a size, returns the contiguous run of file_slice entries
    // each range overlaps. `out_list` is populated with a caller-owned array
    // — release via lts_destroy_file_slice_list. On null / invalid / negative
    // / out-of-range inputs the list is zeroed (length=0, slices=nullptr).
    LTS_EXPORT void lts_torrent_info_map_block(lt::torrent_info* torrent, int32_t piece_index, int64_t offset, int32_t size, file_slice_list* out_list);
    LTS_EXPORT void lts_destroy_file_slice_list(file_slice_list* list);
    // V2 per-file piece-layer bytes: the concatenated SHA-256 leaves for the
    // file's pieces, exactly `num_pieces_in_file * 32` bytes. Pair with
    // lts_torrent_info_file_root to verify the layer against the tree root.
    //
    // Two-call idiom: pass `out_buffer == nullptr` or `buffer_size <= 0` to
    // query the required byte count; pass a real buffer to fill it. Returns
    //   0  on null / invalid / out-of-range / V1-only / empty layer.
    //   N  = required byte count  (query mode)
    //   N' = bytes actually written  (fill mode, = min(required, buffer_size))
    // Short writes are not an error — callers that ask for a partial copy get
    // a truncated prefix. The layer is always a multiple of 32 bytes.
    LTS_EXPORT int32_t lts_torrent_info_piece_layer(lt::torrent_info* torrent, int32_t file_index, uint8_t* out_buffer, int32_t buffer_size);
    // Per-file modification time (Unix epoch seconds) as stored in the .torrent.
    // Returns 0 on null / invalid / out-of-range, or when the file_storage entry
    // lacks a stored mtime (most torrents don't set this — it's optional per
    // BEP-3). Caller distinguishes "file 0 has no mtime" from "epoch 0" by
    // treating any 0 return as absent.
    LTS_EXPORT int64_t lts_torrent_info_file_mtime(lt::torrent_info* torrent, int32_t file_index);
    // priority control
    LTS_EXPORT uint8_t get_file_dl_priority(lt::torrent_handle* torrent, int32_t file_index);
    LTS_EXPORT void set_file_dl_priority(lt::torrent_handle* torrent, int32_t file_index, uint8_t priority);
    LTS_EXPORT void lts_file_progress(lt::torrent_handle* torrent, int64_t* out_array, int32_t num_files);
    // download control
    LTS_EXPORT void start_torrent(lt::torrent_handle* torrent);
    LTS_EXPORT void stop_torrent(lt::torrent_handle* torrent);
    LTS_EXPORT void reannounce_torrent(lt::torrent_handle* torrent, const int32_t seconds, const uint8_t ignore_min_interval);
    // Heap-allocated status snapshot. Release via lts_destroy_torrent_status.
    // Replaces csdl's stack-based get_torrent_status — needed because save_path
    // and error_string are heap-allocated char*.
    LTS_EXPORT torrent_status* lts_get_torrent_status(lt::torrent_handle* torrent);
    LTS_EXPORT void lts_destroy_torrent_status(torrent_status* status);
    // Synchronous progress callback fired once before hashing starts (current_piece=0,
    // total_pieces≥0, piece_size, total_size) and once per piece during hashing. The
    // initial fire delivers piece_size + total_size to the managed side so it can
    // populate the OverallSize field of its progress event without a separate query.
    // ctx is the opaque pointer the caller passed into lts_create_torrent.
    typedef void (*lts_create_torrent_progress_cb)(
        int64_t current_piece,
        int64_t total_pieces,
        int64_t piece_size,
        int64_t total_size,
        void* ctx);
    // Builds a .torrent file from a source path and writes the bencoded result to
    // output_path. Hashing is synchronous on the calling thread — wrap on a worker
    // in managed code. Returns 0 on success, a negative code on failure:
    //   -1 = invalid argument (null required path / bad params)
    //   -2 = source path missing or unreadable
    //   -3 = hashing / generate / bencode threw (libtorrent error)
    //   -4 = file write failed
    //   -5 = cancelled via cancel_flag (no output file written)
    //
    // Tracker wire format (mirrors qBittorrent's flat-list-with-blank-tier-boundary
    // representation):
    // newline-separated URLs; a blank line increments the tier counter. The first
    // tier is 0 and is implicit — only emit a blank line to start tier 1+.
    //
    // web_seeds is newline-separated URLs (no tier concept). comment / created_by
    // are nullable. piece_size = 0 lets libtorrent pick. ignore_hidden = 1 skips
    // dotfile-named entries (Unix-hidden convention) via lt::add_files's filter.
    //
    // progress_cb fires once with current_piece=0 before hashing, then once per
    // piece. May be nullptr to skip progress reporting. cancel_flag is a pointer
    // to an int32_t the managed side can set to 1 from another thread; the native
    // side polls it in the per-piece progress callback and aborts cleanly. May be
    // nullptr when cancellation isn't needed. error_buf, when non-null, receives
    // a UTF-8 message (NUL-terminated, truncated to error_buf_size - 1) describing
    // a failure; on success the buffer is left untouched.
    LTS_EXPORT int32_t lts_create_torrent(
        const char* source_path,
        const char* output_path,
        int32_t piece_size,
        int32_t is_private,
        const char* comment,
        const char* created_by,
        const char* trackers,
        const char* web_seeds,
        int32_t ignore_hidden,
        lts_create_torrent_progress_cb progress_cb,
        void* progress_ctx,
        int32_t* cancel_flag,
        char* error_buf,
        int32_t error_buf_size);