libtorrentsharp/LibtorrentSharp.Native/include/settings.h

    LTS_EXPORT lt::settings_pack* create_settings_pack();
    LTS_EXPORT void destroy_settings_pack(lt::settings_pack* pack);
    LTS_EXPORT uint8_t settings_pack_set_bool(lt::settings_pack* pack, const char* key, uint8_t value);
    LTS_EXPORT uint8_t settings_pack_set_int(lt::settings_pack* pack, const char* key, int value);