libtorrentsharp/LibtorrentSharp/Native/NativeMethods.cs


    /// <summary>
    /// Copies the V2 piece-layer bytes (concatenated SHA-256 leaves) for a
    /// single file into <paramref name="outBuffer"/>. Pass an empty buffer
    /// with <paramref name="bufferSize"/> = 0 to query the required byte
    /// count. Returns bytes written on fill, required count on query, or 0
    /// when the file has no piece layer (V1-only torrent, out-of-range, or
    /// invalid handle). Layer length is always a multiple of 32.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_piece_layer")]
    public static partial int TorrentInfoPieceLayer(IntPtr torrentInfoHandle, int fileIndex, [Out] byte[] outBuffer, int bufferSize);

    /// <summary>
    /// Number of pieces that overlap a file. Returns 0 on invalid handle or
    /// out-of-range file index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_file_num_pieces")]
    public static partial int TorrentInfoFileNumPieces(IntPtr torrentInfoHandle, int fileIndex);

    /// <summary>
    /// Number of fixed-size 16 KiB blocks that overlap a file. Returns 0 on
    /// invalid handle or out-of-range file index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_file_num_blocks")]
    public static partial int TorrentInfoFileNumBlocks(IntPtr torrentInfoHandle, int fileIndex);

    /// <summary>
    /// Piece extent for a file: writes the first piece overlapping the file
    /// and one-past-the-last into <paramref name="firstPiece"/> /
    /// <paramref name="endPiece"/>. Returns false on invalid handle, null
    /// out pointers, or out-of-range file index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_file_piece_range")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool TorrentInfoFilePieceRange(IntPtr torrentInfoHandle, int fileIndex, out int firstPiece, out int endPiece);

    /// <summary>
    /// Maps a (file, byte-offset, size) tuple onto the piece containing the
    /// start of that range. Returns true on success and writes the piece
    /// index, byte offset within the piece, and capped length through the
    /// out parameters. Returns false (leaving out params zero) on invalid
    /// handle, negative inputs, or out-of-range file index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_map_file")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool TorrentInfoMapFile(IntPtr torrentInfoHandle, int fileIndex, long offset, int size, out int pieceIndex, out int pieceOffset, out int length);

    /// <summary>
    /// Inverse of <see cref="TorrentInfoMapFile"/>: returns the list of file
    /// slices a piece-offset range spans. Populates <paramref name="list"/>
    /// with a native-allocated buffer; release via <see cref="FreeFileSliceList"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_map_block")]
    public static partial void TorrentInfoMapBlock(IntPtr torrentInfoHandle, int pieceIndex, long offset, int size, out NativeStructs.FileSliceList list);

    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_file_slice_list")]
    public static partial void FreeFileSliceList(ref NativeStructs.FileSliceList list);

    /// <summary>
    /// Per-file modification time as Unix epoch seconds. Returns 0 on invalid
    /// handle, out-of-range index, or when the .torrent didn't record an mtime
    /// for the file (most don't).
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_file_mtime")]
    public static partial long TorrentInfoFileMtime(IntPtr torrentInfoHandle, int fileIndex);

    /// <summary>
    /// Request a list of files contained within a torrent.
    /// </summary>
    /// <param name="torrentHandle">Handle of the torrent file to get info for</param>
    /// <param name="files">Location of the <see cref="NativeStructs.TorrentFileList"/> to populate</param>
    [LibraryImport(LibraryName, EntryPoint = "get_torrent_file_list")]
    public static partial void GetTorrentFileList(IntPtr torrentHandle, out NativeStructs.TorrentFileList files);

    /// <summary>
    /// Release the unmanaged resources associated with a <see cref="files"/>.
    /// </summary>
    /// <param name="files">The file list to release</param>
    [LibraryImport(LibraryName, EntryPoint = "destroy_torrent_file_list")]
    public static partial void FreeTorrentFileList(ref NativeStructs.TorrentFileList files);

    /// <summary>
    /// Get the download priority of a file within a torrent.
    /// </summary>
    /// <param name="torrentSessionHandle">The torrent session handle</param>
    /// <param name="fileIndex">The index of the file to get the priority of</param>
    [LibraryImport(LibraryName, EntryPoint = "get_file_dl_priority")]
    public static partial FileDownloadPriority GetFilePriority(IntPtr torrentSessionHandle, int fileIndex);

    [LibraryImport(LibraryName, EntryPoint = "lts_file_progress")]
    public static partial void GetFileProgress(IntPtr torrentHandle, Span<long> outArray, int numFiles);

    /// <summary>
    /// Sets the download priority of a file within a torrent.
    /// </summary>
    /// <param name="torrentSessionHandle">The torrent session handle</param>
    /// <param name="fileIndex">The index of the file to set the priority of</param>
    /// <param name="priority">The download priority to apply</param>
    [LibraryImport(LibraryName, EntryPoint = "set_file_dl_priority")]
    public static partial void SetFilePriority(IntPtr torrentSessionHandle, int fileIndex, FileDownloadPriority priority);

    /// <summary>
    /// Starts or resumes a torrent download
    /// </summary>
    /// <param name="torrentSessionHandle">The torrent session handle to start</param>
    [LibraryImport(LibraryName, EntryPoint = "start_torrent")]
    public static partial void StartTorrent(IntPtr torrentSessionHandle);

    /// <summary>
    /// Stops a torrent download
    /// </summary>
    /// <param name="torrentSessionHandle">The torrent session handle to stop</param>
    [LibraryImport(LibraryName, EntryPoint = "stop_torrent")]
    public static partial void StopTorrent(IntPtr torrentSessionHandle);

    /// <summary>
    /// Re-announce the torrent to all trackers.
    /// </summary>
    /// <param name="torrentSessionHandle">The torrent session handle to apply the reannounce to</param>
    /// <param name="seconds">The delay, in seconds, before performing the reannouncement</param>
    /// <param name="force">Whether to ignore min times between reannounces</param>
    [LibraryImport(LibraryName, EntryPoint = "reannounce_torrent")]
    public static partial void ReannounceTorrent(IntPtr torrentSessionHandle, int seconds, [MarshalAs(UnmanagedType.I1)] bool force);

    /// <summary>
    /// Retrieves a heap-allocated status snapshot. Caller must release via
    /// <see cref="FreeTorrentStatus"/> after copying the fields into managed memory.
    /// Returns <see cref="IntPtr.Zero"/> when the handle is invalid.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_torrent_status")]
    public static partial IntPtr GetTorrentStatus(IntPtr torrentSessionHandle);

    /// <summary>
    /// Releases a status snapshot returned by <see cref="GetTorrentStatus"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_torrent_status")]
    public static partial void FreeTorrentStatus(IntPtr statusHandle);

    /// <summary>
    /// Builds a .torrent file from <paramref name="sourcePath"/> and writes the
    /// bencoded result to <paramref name="outputPath"/>. Hashes synchronously
    /// on the calling thread — managed callers wrap on a worker.
    /// <paramref name="trackers"/> is newline-separated tracker URLs (a blank line
    /// increments the tier; matches qBittorrent's flat representation).
    /// <paramref name="webSeeds"/> is newline-separated web-seed URLs.
    /// <paramref name="ignoreHidden"/> non-zero skips dotfile-named entries (Unix-hidden).
    /// <paramref name="progressCb"/> fires once with currentPiece=0 before hashing and once
    /// per piece — may be null. <paramref name="cancelFlag"/> is a pinned <c>int32</c> the
    /// caller flips to 1 to abort hashing — may be null. <paramref name="errorBuf"/>
    /// receives a UTF-8 NUL-terminated message on failure; untouched on success. Returns
    /// 0 on success; negative codes documented on the C ABI.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_create_torrent", StringMarshalling = StringMarshalling.Utf8)]
    public static unsafe partial int CreateTorrent(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string sourcePath,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string outputPath,
        int pieceSize,
        int isPrivate,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? comment,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? createdBy,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? trackers,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? webSeeds,
        int ignoreHidden,
        [MarshalAs(UnmanagedType.FunctionPtr)] CreateTorrentProgressCallback? progressCb,
        IntPtr progressCtx,
        int* cancelFlag,
        byte* errorBuf,
        int errorBufSize);

    /// <summary>
    /// Creates an empty settings pack
    /// </summary>
    /// <remarks>
    /// This method is used to create a settings pack that can be customised and applied to a session.
    /// Add items using the SettingsPackAdd* methods, and apply it using either <see cref="ApplySettingsPack"/> or <see cref="CreateSession"/>.
    /// Note this handle needs to be manually freed, even after applying it to a session.
    /// </remarks>
    /// <returns>A handle to the created settings pack</returns>
    [LibraryImport(LibraryName, EntryPoint = "create_settings_pack")]
    public static partial IntPtr CreateSettingsPack();

    /// <summary>
    /// Frees a settings pack by its handle.
    /// </summary>
    /// <param name="settingsPack">The pack to free</param>
    [LibraryImport(LibraryName, EntryPoint = "destroy_settings_pack")]
    public static partial void FreeSettingsPack(IntPtr settingsPack);

    /// <summary>
    /// Adds an <see cref="int"/> value to the settings pack
    /// </summary>
    /// <param name="settingsPack">The pack handle</param>
    /// <param name="key">The configuration key to set</param>
    /// <param name="value">The integer value to apply</param>
    /// <returns>
    /// Whether the value was successfully added.
    /// If false, either the configuration does not exist or is the wrong type.
    /// </returns>
    [return: MarshalAs(UnmanagedType.I1)]
    [LibraryImport(LibraryName, EntryPoint = "settings_pack_set_int", StringMarshalling = StringMarshalling.Utf8)]
    public static partial bool SettingsPackSetInt(IntPtr settingsPack, string key, int value);

    /// <summary>
    /// Adds a <see cref="bool"/> value to the settings pack
    /// </summary>
    /// <param name="settingsPack">The pack handle</param>
    /// <param name="key">The configuration key to set</param>
    /// <param name="value">The boolean value to apply</param>
    /// <returns>
    /// Whether the value was successfully added.
    /// If false, either the configuration does not exist or is the wrong type.
    /// </returns>
    [return: MarshalAs(UnmanagedType.I1)]
    [LibraryImport(LibraryName, EntryPoint = "settings_pack_set_bool", StringMarshalling = StringMarshalling.Utf8)]
    public static partial bool SettingsPackSetBool(IntPtr settingsPack, string key, [MarshalAs(UnmanagedType.I1)] bool value);
